option('build_benchmark',
	type: 'boolean',
	value: false,
	description: 'Whether to build benchmark')

option('build_doc',
	type: 'array',
	choices: ['valadoc', 'gtkdoc'],
	value: [],
	description: 'Documentations that will be built')

option('have_atomic_int64_lock_free',
	type: 'boolean',
	value: true,
	description: 'The 64-bit atomic operations must be implemented using real hardware atomic operations')
