option('benchmark',
	type: 'boolean',
	value: false,
	description: 'Whether to build benchmark')

option('docs',
	type: 'array',
	choices: ['valadoc', 'gtkdoc'],
	value: [],
	description: 'Documentations that will be built')

option('typelib',
	type: 'boolean',
	value: false,
	description: 'Whether to build typelib')

option('have_atomic_int64_lock_free',
	type: 'boolean',
	value: true,
	description: 'The 64-bit atomic operations must be implemented using real hardware atomic operations')
